# self

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  readme.md  readme.native2.md  readme.native3.md
docs/handbook/: .gitignore  Makefile  README.md  blocks.rst  build.rst  build.sh  buildvm.rst  buildworld.rst  builtintypes.rst  collections.rst  conf.py  extras.rst  foreign.rst  gettingstarted.rst  glossary.rst  howtoprg.rst  index.rst  intro.rst  langref.rst  lexicaloverview.rst  logging.rst  lowlevel.rst  menus.rst  messages.rst  mirrors.rst  monitor.rst  morphic.rst  native.rst  numbers.rst  oddball.rst  pairs.rst  primitives.rst  processes.rst  progguid.rst  pyproject.toml  roots.rst  selfwrld.rst  ui1.rst  unix.rst  usefulselectors.rst  (+2 more)
docs/handbook/.doctrees/: index.doctree  ref.doctree
docs/handbook/_build/doctrees/: appendices.doctree  blocks.doctree  buildvm.doctree  buildworld.doctree  builtintypes.doctree  collections.doctree  environment.pickle  extras.doctree  foreign.doctree  gettingstarted.doctree  glossary.doctree  howtoprg.doctree  index.doctree  intro.doctree  langref.doctree  lexicaloverview.doctree  logging.doctree  lowlevel.doctree  menus.doctree  messages.doctree  mirrors.doctree  monitor.doctree  morphic.doctree  numbers.doctree  oddball.doctree  pairs.doctree  primitives.doctree  processes.doctree  progguid.doctree  ref.doctree  roots.doctree  selfwrld.doctree  syntaxoverview.doctree  textdebug.doctree  ui1.doctree  unix.doctree  usefulselectors.doctree  vmref.doctree  worldorg.doctree
docs/handbook/_build/epub/: .buildinfo  SelfHandbook.epub  appendices.xhtml  blocks.xhtml  buildvm.xhtml  buildworld.xhtml  builtintypes.xhtml  collections.xhtml  content.opf  extras.xhtml  foreign.xhtml  genindex.xhtml  gettingstarted.xhtml  glossary.xhtml  howtoprg.xhtml  index.xhtml  intro.xhtml  langref.xhtml  lexicaloverview.xhtml  logging.xhtml  lowlevel.xhtml  menus.xhtml  messages.xhtml  mirrors.xhtml  monitor.xhtml  morphic.xhtml  nav.xhtml  numbers.xhtml  oddball.xhtml  pairs.xhtml  primitives.xhtml  processes.xhtml  progguid.xhtml  ref.xhtml  roots.xhtml  selfwrld.xhtml  syntaxoverview.xhtml  textdebug.xhtml  toc.ncx  ui1.xhtml  (+4 more)
docs/handbook/_build/html/: .buildinfo  appendices.html  blocks.html  buildvm.html  buildworld.html  builtintypes.html  collections.html  extras.html  foreign.html  genindex.html  gettingstarted.html  glossary.html  howtoprg.html  index.html  intro.html  langref.html  lexicaloverview.html  logging.html  lowlevel.html  menus.html  messages.html  mirrors.html  monitor.html  morphic.html  numbers.html  objects.inv  oddball.html  pairs.html  primitives.html  processes.html  progguid.html  ref.html  roots.html  search.html  searchindex.js  selfwrld.html  syntaxoverview.html  textdebug.html  ui1.html  unix.html  (+3 more)
docs/handbook/_build/latex/: SelfHandbook.aux  SelfHandbook.idx  SelfHandbook.out  SelfHandbook.tex  SelfHandbook.toc
docs/handbook/_build/singlehtml/: index.html  objects.inv
docs/handbook/_build/text/: appendices.txt  blocks.txt  buildvm.txt  buildworld.txt  builtintypes.txt  collections.txt  extras.txt  foreign.txt  gettingstarted.txt  glossary.txt  howtoprg.txt  index.txt  intro.txt  langref.txt  lexicaloverview.txt  logging.txt  lowlevel.txt  menus.txt  messages.txt  mirrors.txt  monitor.txt
docs/handbook/built/html/: builtintypes.html  extras.html  foreign.html  gettingstarted.html  index.html  langref.html  menus.html  messages.html  mirrors.html  monitor.html  objects.inv  oddball.html  pairs.html  primitives.html  processes.html  progguid.html  search.html  searchindex.js  selfwrld.html  textdebug.html  ui1.html  vmref.html  worldorg.html
docs/handbook/extensions/: numsec.py
docs/handbook/src/: conf.py  extras.rst  messages.rst  oddball.rst  unix.rst
docs/handbook/src/.doctrees/: environment.pickle
tools/: CMakeLists.txt  readme.md
tools/build-framework/: Justfile  readme.txt
tools/ci/: Justfile  manual.md  tutorial.md
tools/ci/provision/: freebsd-i386-console.exp  freebsd-i386.sh  freebsd.sh  linux.sh  netbsd-i386.sh
tools/ci64/: build-all.sh  build-native.sh  build-vm.sh  manual.md  setup-images.sh  tutorial.md
tools/ci64/configs/: freebsd-arm64.conf  linux-amd64.conf  linux-arm64.conf  netbsd-arm64.conf
tools/ci64/provision/: freebsd-console.exp  netbsd.sh
tools/shell/: Browse  get_arch
tools/src/: AddTrailingNewline.cpp  cmprev.c  dangling.c  linked.c  rself.cpp  runBinary.cpp  zap.cpp
vm/: CMakeLists.txt  Makefile  Makefile_to_put_in_Self_dir  travis-ci-buildAndTest.sh
vm/build_support/: cppas  includeDB.in  makeDeps.cpp  obj_patch.cpp  vmDate.c.in  vmDate.cpp.in
vm/build_support/mac_osx/: Info.plist  InfoCocoa.plist
vm/cmake/: Clang.cmake  assemblerSupport.cmake  common.cmake  configurations.cmake  configureVmDate.cmake.in  cygwin.cmake  dependencies.cmake  force_clang.cmake  freebsd.cmake  functions.cmake  linux.cmake  mac_osx.cmake  makeDeps.cmake  netbsd.cmake  platform.cmake  policies.cmake  setup.cmake  setupVmDate.cmake  svr4.cmake  windows.cmake
vm/linux/: Makefile
vm/linux/debug/: Makefile
vm/linux/optimized/: Makefile
vm/mac_osx/: CMakeLists.txt  Makefile  SelfDroplet.applescript  platform.cmake
vm/mac_osx/SelfDroplet/: Application.applescript  Info.plist
vm/mac_osx/SelfDroplet/English.lproj/: InfoPlist.strings
vm/mac_osx/vm_project/: Exp-Info.plist  Info-Self_debug__Upgraded_.plist  Info-Self_optimized__Upgraded_.plist  vmDate.s
vm/src/: CMakeLists.txt  Makefile  Platform_linux  Platform_mac  Platform_mac_osx  Platform_sparc  includeDB
vm/src/any/: Makefile
vm/src/any/asm/: Makefile  asm.cpp  asm.hh  (+18 more)
vm/src/i386/: Makefile
vm/src/ppc/: Makefile
vm/src/sparc/: Makefile
vm/src/unix/: Makefile
vm/svr4/: Makefile
vm/svr4/debug/: Makefile
vm/svr4/interpreter/: Makefile
vm/svr4/links/: Makefile
vm/svr4/optimized/: Makefile
vm/svr4/profiled/: Makefile
vm/templates/: Makefile  READ_ME  compile.make  debug.make  link.make  linux.make  mac_osx.make  optimized.make  profiled.make  sun4.make  sun4_write.make  svr4.make  svr4_write.make
(+2987 files in other folders)
